Add module setting and jacoco versionup to test travisCI.