@@ -17,7 +17,7 @@
 	<properties>
 		<!-- plugin versions -->
 		<tycho-version>1.2.0</tycho-version>
-		<jacoco-version>0.8.0</jacoco-version>
+		<jacoco-version>0.8.1</jacoco-version>
 		<antrun-version>1.8</antrun-version>
 		<sphinx-maven-plugin-version>1.7.0</sphinx-maven-plugin-version>
 		<maven-dependency-plugin-version>3.0.2</maven-dependency-plugin-version>
@@ -231,7 +231,7 @@
 					<!-- <application>org.eclipse.ui.ide.workbench</application> -->
 					<product>tmdmaker.rcp.product</product>
 					<!-- <application>org.eclipse.e4.ui.workbench.swt.E4Application</application> -->
-					<argLine>${tycho.testArgLine} -Xms40m -Xmx1G ${os-jvm-flags}</argLine>
+					<argLine>${tycho.testArgLine} -Xms40m -Xmx1G ${os-jvm-flags} --add-modules=ALL-SYSTEM</argLine>
 					<appArgLine>-clean -nl en</appArgLine>
 				</configuration>
 			</plugin>
